Added initial forked code.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
 
     <p>This incorporates a number of patches submitted to the original module version 6.x-1.x-dev (see http://drupal.org/project/issues/patterns?categories=All) as well as further improvements.
 
-The motivation for creating this repository is to track all the new improvements being made to the module via Git (better than tracking through the patches submitted) and to (hopefully!) encourage the original module authors to roll the changes in this fork back into the original module.</p><h2>Dependencies</h2>
+The motivation for creating this repository is to track all the new improvements being made to the module via Git (better than tracking through the patches submitted).</p>
+
+<h2>Dependencies</h2>
 <p>Drupal 6, PHP 5.1, Token module (http://drupal.org/project/token).</p>
 <h2>Install</h2>
 <p>Simply overwrite your patterns module folder with this one.</p>
